\name{NEWS}
\title{NEWS for EdSurvey}

\section{Changes in version 4.0.5}{
  \subsection{UPDATES}{
    \itemize{
      \item allow Matrix 1-5-4.1 after testing to allower older R versions on Mac OS.
    }
  }
}

\section{Changes in version 4.0.4}{
  \subsection{UPDATES}{
    \itemize{
      \item upated to pass CRAN checks, \code{cbind} and \code{rbind} are nolonger explicitly exported. Apparently this changed in R 4.0.0 and we were behind the times. The load message is not shorter because we do not export these functions.
      \item similarly \code{subset} is nolonger exported but is instead implemented. Becuase of that there is no documentation for it now, but it works as the original \code{subset} works and adds an \code{inside} argument that prevents \code{substitute} from being called on the \code{subset} argument as recomended in Advanced R (Wickham, 2014).
      \item 
      \item `downloadPIRLS` and `readPIRLS` were updated to include PIRLS 2021 data
      \item updated subscale mappings for TIMSS to allow for four-character subscale names to be used with \code{mml.sdf} for all subscales across grade, subject, and year
      \item exported \code{readHSTS}
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item \code{readNAEP} used to read in a non-existant weight named \code{weight} in rare instances. This is now fixed.
      \item fixed bug where \code{mml.sdf} produced an error if there were not polytomous items associated with the subscale.
    }
  }
}

\section{Changes in version 4.0.0}{
  \subsection{UPDATES}{
    \itemize{
      \item the argument \code{omittedLevels} has been deprecated and replaced with \code{dropOmittedLevels} for clarity.
      \item \code{mml.sdf} now allows users to select \code{composite=TRUE} for TIMSS after recoding the \code{testData} to indicate the test.
      \item \code{mml.sdf} now gives clearer warnings when there are no records with assessment data or no students with valid covariate data.